@@ -4,8 +4,9 @@ export interface Message {
 }
 
 export interface AnnotationRelationComboboxStatusEntry {
-  annotation_id:       string;
+  annotation_id:        string;
   annotation_attribute: string;
+  options?:             any;
 }
 export interface AnnotationRelationComboboxStatus {
   [element_id: string]: AnnotationRelationComboboxStatusEntry
